--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -15,16 +15,20 @@ div.home {
     box-sizing: border-box;
     width: 100%;
     cursor: pointer;
-    transition: color .2s, border-color .2s;
+    transition:
+      color 0.2s,
+      border-color 0.2s;
     color: $babyPowder;
     border: 2px $babyPowder solid;
     border-radius: 5px;
     background: $charcoal;
-    padding-block: .1em;
+    padding-block: 0.1em;
 
-    &:hover {
-      color: $zomp;
-      border-color: $zomp;
+    @media (hover: hover) and (pointer: fine) {
+      &:hover {
+        color: $zomp;
+        border-color: $zomp;
+      }
     }
   }
 
