--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,29 +1,30 @@
 div.home {
+  display: inline-flex;
+  flex-direction: column;
   width: 70%;
   height: 80vh;
   margin-block: 10vh;
   padding-inline: 15%;
 
   button.addButton {
+    font-size: 2.4em;
     position: relative;
-    width: 100%;
-    height: 6%;
-    padding-block: .1em;
     display: flex;
-    justify-content: center;
     align-items: center;
-    border-radius: 5px;
-    color: $babyPowder;
-    background: $charcoal;
-    border: 2px $babyPowder solid;
-    font-size: 2em;
+    justify-content: center;
     box-sizing: border-box;
+    width: 100%;
     cursor: pointer;
     transition: color .2s, border-color .2s;
+    color: $babyPowder;
+    border: 2px $babyPowder solid;
+    border-radius: 5px;
+    background: $charcoal;
+    padding-block: .1em;
 
     &:hover {
-      border-color: $zomp;
       color: $zomp;
+      border-color: $zomp;
     }
   }
 
@@ -41,30 +42,21 @@ div.home {
 }
 
 section.testContainer {
-  width: 100%;
-  max-height: calc(71% - 4em);
-  box-sizing: border-box;
-  padding-right: 1em;
-  margin-block: 2em;
+  display: inline-flex;
   overflow: hidden;
   overflow-y: scroll;
-  display: inline-flex;
   flex-direction: column;
+  box-sizing: border-box;
+  width: 100%;
+  padding-right: 1em;
+  margin-block: 2em;
   gap: 1em;
-
-  @media screen and (width < 859px) {
-    max-height: calc(73% - 4em);
-  }
-
-  @media screen and (width < 600px) {
-    max-height: calc(72% - 4em);
-  }
 }
 
 section.loadingContainer {
-  height: 50vh;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  height: 50vh;
 
   @media screen and (width < 850px) {
     height: 65vh;
