--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -3,8 +3,7 @@ body {
   font-weight: 400;
   background-color: $gunmetal;
   color: $babyPowder;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: hidden hidden;
   margin: 0;
 
   ::-webkit-scrollbar{
