--- a/src/components/ErrorContainer/ErrorContainer.module.scss
+++ b/src/components/ErrorContainer/ErrorContainer.module.scss
@@ -6,7 +6,7 @@ div.container {
   flex-direction: column;
   top: 0;
   left: 0;
-  gap: .5em;
+  gap: 0.5em;
   margin-top: 1em;
   margin-inline: 20%;
   overflow: hidden;
