Remove modalWindow reducer
Убран редьюсер модального окна. Его части были расформированы между другими редьюсерами. Добавлена загрузка при переходе на экран формы теста. Добавлена кнопка возвращения на главную страницу

--- a/src/components/LoadingContainer/LoadingContainer.module.scss
+++ b/src/components/LoadingContainer/LoadingContainer.module.scss
@@ -1,9 +1,9 @@
-section.root {
+div.root {
   position: absolute;
   display: grid;
   place-items: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0;
   left: 0;
 }
