--- a/src/components/TestForm/TestForm.module.scss
+++ b/src/components/TestForm/TestForm.module.scss
@@ -11,10 +11,10 @@ form.root {
     text-align: center;
     font-size: 2.3em;
     margin-top: 0;
-    margin-bottom: .5em;
+    margin-bottom: 0.5em;
   }
 
-  @media screen and (width < 850px){
+  @media screen and (width < 850px) {
     height: 90vh;
     width: 90vw;
     padding-inline: 5vw;
