--- a/src/components/TestForm/components/TestFormQuestions/TestFormQuestions.module.scss
+++ b/src/components/TestForm/components/TestFormQuestions/TestFormQuestions.module.scss
@@ -5,14 +5,14 @@ div.content {
 }
 
 div.root {
-  width: calc(100% - .5em);
+  width: calc(100% - 0.5em);
   max-height: 100%;
   display: inline-flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  gap: .5em;
-  padding-right: .5em;
+  gap: 0.5em;
+  padding-right: 0.5em;
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -22,7 +22,7 @@ div.question {
   width: 100%;
   display: inline-flex;
   justify-content: space-between;
-  gap: .5em;
+  gap: 0.5em;
   padding-right: 1em;
 
   p.questionTitle {
@@ -32,7 +32,7 @@ div.question {
     box-sizing: border-box;
     border-radius: 5px;
     padding-inline: 1em;
-    padding-block: .4em;
+    padding-block: 0.4em;
     background: $charcoal;
     border: 2px $babyPowder solid;
   }
@@ -40,7 +40,7 @@ div.question {
 
 div.questionButtons {
   display: flex;
-  gap: .5em;
+  gap: 0.5em;
 
   button.questionButton {
     width: 3em;
@@ -49,20 +49,20 @@ div.questionButtons {
     box-sizing: border-box;
     border-radius: 5px;
     padding-inline: 1em;
-    padding-block: .4em;
+    padding-block: 0.4em;
     background: $charcoal;
     border: 2px $babyPowder solid;
   }
 
   button.editButton {
-    background-image: url("~public/images/svg/editPencil.svg");
+    background-image: url('~public/images/svg/editPencil.svg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: 65%, contain;
-    transition: background-image .2s;
+    transition: background-image 0.2s;
 
     &:hover {
-      background-image: url("~public/images/svg/editPencilActive.svg");
+      background-image: url('~public/images/svg/editPencilActive.svg');
     }
   }
 
