--- a/src/components/ModalWindow/components/ModalContent/ModalQuestions/CheckboxModalAnswer/CheckboxModalAnswer.module.scss
+++ b/src/components/ModalWindow/components/ModalContent/ModalQuestions/CheckboxModalAnswer/CheckboxModalAnswer.module.scss
@@ -7,6 +7,7 @@ div.answer {
   padding-inline: 1em;
   padding-block: 0.5em;
   border-radius: 5px;
+  cursor: pointer;
   border: 2px $babyPowder solid;
 
   label.answerLabel {
