--- a/src/components/TestForm/components/TestFormInfoEdit/TestFormInfoEdit.module.scss
+++ b/src/components/TestForm/components/TestFormInfoEdit/TestFormInfoEdit.module.scss
@@ -68,7 +68,7 @@ div.chooseQuestionContainer {
     padding-right: 2em;
     padding-block: 0.4em;
     background-image: url('~public/images/svg/selectArrow.svg');
-    background-size: 15%;
+    background-size: 40px;
     background-repeat: no-repeat;
     background-position-y: center;
     background-position-x: calc(100% - 0.2em);
