--- a/src/components/ModalWindow/components/ModalContent/ModalQuestions/CheckboxModalAnswer/CheckboxModalAnswer.module.scss
+++ b/src/components/ModalWindow/components/ModalContent/ModalQuestions/CheckboxModalAnswer/CheckboxModalAnswer.module.scss
@@ -32,36 +32,20 @@ div.answer {
   }
 
   div.customCheckbox {
-    position: absolute;
-    cursor: pointer;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    top: 50%;
-    transform: translate(0, -50%);
-    left: 0;
-    width: 0.8em;
-    height: 0.8em;
-    border: 2px $babyPowder solid;
-    border-radius: 3px;
-
-    &:after {
-      content: '';
-      opacity: 0;
-      width: 25%;
-      height: 65%;
-      rotate: 45deg;
-      border-bottom: 2px $babyPowder solid;
-      border-right: 2px $babyPowder solid;
-      transition: opacity 0.1s;
-    }
+    @include customCheckbox(0.9em);
   }
 
-  input.answerCheckbox {
+  div.customRadio {
+    @include customRadio(1em);
+  }
+
+  input.answerCheckbox,
+  input.answerRadio {
     opacity: 0;
     margin-right: 1em;
 
-    &:checked + div.customCheckbox:after {
+    &:checked + div.customCheckbox:after,
+    &:checked + div.customRadio:after {
       opacity: 1;
     }
   }
