--- a/src/components/TestForm/TestForm.module.scss
+++ b/src/components/TestForm/TestForm.module.scss
@@ -1,10 +1,10 @@
 form.root {
-  height: 80vh;
+  height: 90%;
   width: 80vw;
   display: grid;
   grid-template-rows: 1fr 1fr 4fr 1fr;
   padding-inline: 10vw;
-  padding-block: 10vh;
+  padding-block: 5%;
 
   h1.formTitle {
     text-align: center;
@@ -17,6 +17,5 @@ form.root {
     height: 90vh;
     width: 90vw;
     padding-inline: 5vw;
-    padding-block: 5vh;
   }
 }
