--- a/src/components/ModalWindow/ModalWindow.module.scss
+++ b/src/components/ModalWindow/ModalWindow.module.scss
@@ -27,9 +27,11 @@ div.componentFrom {
   display: inline-flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 1em;
   z-index: 10;
   width: 45%;
-  height: 70%;
+  height: fit-content;
+  max-height: 70%;
   padding: 2.5%;
   box-sizing: border-box;
   background: $charcoal;
@@ -42,12 +44,12 @@ div.componentFrom {
 
   @media screen and (width < 1024px) {
     width: 70%;
-    height: 75%;
+    max-height: 75%;
   }
 
-  @media screen and (width < 500px) {
+  @media screen and (width < 850px) {
     width: 80%;
-    height: 85%;
+    max-height: 85%;
   }
 }
 
@@ -64,15 +66,18 @@ div.formHeader {
   align-items: center;
 
   h1.title {
-    width: 90%;
-    margin: 0;
+    text-align: center;
+    width: 80%;
+    margin-block: 0;
+    margin-left: 10%;
     font-size: 2em;
   }
 
   button.closeButton {
     @include cross(1.3em, 3px);
-    width: 38px;
-    height: 38px;
+    align-self: flex-start;
+    width: 34px;
+    height: 34px;
     outline: none;
     cursor: pointer;
     background: transparent;
