--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -44,6 +44,18 @@ div.home {
   }
 }
 
+div.errorTitleContainer {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+
+  h1.notFoundTitle {
+    font-size: 2em;
+  }
+}
+
 section.testContainer {
   display: inline-flex;
   overflow: hidden;
