--- a/src/components/EntryForm/EntryForm.module.scss
+++ b/src/components/EntryForm/EntryForm.module.scss
@@ -17,7 +17,7 @@ form.form {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  gap:2em;
+  gap: 2em;
   border-radius: 10px;
   background-color: $charcoal;
   border: 1px $babyPowder solid;
@@ -29,15 +29,35 @@ form.form {
     font-weight: 500;
     text-align: center;
 
-    @media screen and (width <= 1024px) {
+    @media screen and (width <= 1124px) {
       font-size: 4.7vh;
       font-weight: 700;
     }
   }
 
-  @media screen and (width <= 1024px) {
+  @media screen and (width <= 1124px) {
     width: 90%;
     padding: 1em;
+  }
+}
+
+div.confirmPasswordContainer {
+  width: 100%;
+  display: inline-flex;
+  flex-direction: column;
+
+  p.matchErrorTitle {
+    margin-top: 0.4em;
+    margin-bottom: 0;
+    margin-left: 10%;
+    color: $oldRose;
+    font-size: 1vw;
+    transition: 0.2s;
+
+    @media screen and (width <= 1124px) {
+      font-size: 2.2vh;
+      margin-left: 5%;
+    }
   }
 }
 
@@ -77,7 +97,7 @@ button.submit {
     scale: 0.97;
   }
 
-  @media screen and (width <= 1024px) {
+  @media screen and (width <= 1124px) {
     width: 90%;
     height: 2.5em;
     font-size: 3vh;
@@ -124,7 +144,7 @@ div.additionalContent {
       border-bottom-color: $jungleGreen;
     }
 
-    @media screen and (width <= 1024px) {
+    @media screen and (width <= 1124px) {
       font-size: 2.2vh;
     }
   }
@@ -143,19 +163,20 @@ label.isAdmin {
     color: $babyPowder;
     text-align: left;
 
-    @media screen and (width <= 1024px) {
+    @media screen and (width <= 1124px) {
       font-size: 2.2vh;
     }
   }
 
   div.customCheckbox {
     position: relative;
-    display: grid;
-    place-items: center;
-    width: 1em;
-    height: 1em;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    width: 1.2em;
+    height: 1.2em;
     border-radius: 3px;
-    border: 1px solid $babyPowder;
+    border: 2px solid $babyPowder;
 
     &::before {
       position: absolute;
@@ -163,14 +184,14 @@ label.isAdmin {
       opacity: 0;
       width: 25%;
       height: 60%;
-      margin-bottom: 10%;
+      margin-top: 5%;
       rotate: 45deg;
       border-bottom: 2px solid rgba($babyPowder, 1);
       border-right: 2px solid rgba($babyPowder, 1);
       transition: opacity 0.2s;
     }
 
-    @media screen and (width <= 1024px) {
+    @media screen and (width <= 1124px) {
       width: 2.2vh;
       height: 2.2vh;
     }
@@ -184,7 +205,7 @@ label.isAdmin {
     }
   }
 
-  @media screen and (width <= 1024px) {
+  @media screen and (width <= 1124px) {
     width: 90%;
   }
 }
