Fix modal window
Переработана логика модального окна. Теперь вместо вызова на верхнем уровне приложения, оно вызывается только около вызывающих ее элементов с передачей аргументов

--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -90,3 +90,9 @@ div.paginationLoading {
   width: 100%;
   @include loadingCircle(2em, 0.3em);
 }
+
+div.paginationLoadingContainer {
+  display: grid;
+  place-items: center;
+  width: 100%;
+}
