--- a/src/components/Home/components/HomeNavbar/HomeNavbar.module.scss
+++ b/src/components/Home/components/HomeNavbar/HomeNavbar.module.scss
@@ -1,6 +1,7 @@
 @mixin navButton {
   width: fit-content;
   padding-block: 0.5em;
+  cursor: pointer;
   padding-inline: 1em;
   font-size: 1.4em;
   white-space: nowrap;
@@ -65,7 +66,6 @@ div.secondLine {
     align-items: center;
     justify-content: center;
     gap: 0.5em;
-    cursor: pointer;
 
     @media (hover: hover) and (pointer: fine) {
       &:hover {
@@ -102,9 +102,8 @@ div.secondLine {
     rotate: 180deg;
   }
 
-  a.logout {
+  button.logout {
     @include navButton;
-    text-decoration: none;
 
     @media (hover: hover) and (pointer: fine) {
       &:hover {
